[package]
name = "heidi"
description = "A library to work with NHS numbers"
version = "0.1.0"
authors = ["Arnau Siches <asiches@gmail.com>"]
edition = "2018"
license = "MIT"
homepage = "https://github.com/arnau/heidi"
repository = "https://github.com/arnau/heidi.git"
readme = "README.md"

[[bin]]
name = "heidi"
path = "src/cli/main.rs"

[dependencies]
rand = "0.7"
structopt = "0.3"
clap = "2"
